# globeco-portfolio-service

./: .dockerignore  ARCHITECTURE_DESIGN.md  CUSTOM_METRICS_TROUBLESHOOTING.md  DAEMONSET_TROUBLESHOOTING.md  DYNAMIC_METRICS_ACCESS_FIX.md  Dockerfile  Dockerfile copy  Dockerfile.dev  FINAL_FIX_SUMMARY.md  FINAL_TROUBLESHOOTING_STEPS.md  LOGGING_README.md  METRICS_ENDPOINT_VERIFICATION_REPORT.md  METRICS_INITIALIZATION_FIX.md  MIDDLEWARE_IMPLEMENTATION_SUMMARY.md  MIGRATION_STRATEGY.md  MONGODB_CONNECTION_FIX.md  OPENTELEMETRY_METRICS_INTEGRATION_REPORT.md  PERFORMANCE_TROUBLESHOOTING.md  README.md  ROOT_CAUSE_ANALYSIS.md  SEMANTIC_CONVENTIONS_FIX.md  STREAMLINING_REQUIREMENTS.md  TECHNICAL_IMPLEMENTATION_PLAN.md  check_collector_debug.py  check_metrics_flow.sh  check_prometheus_config.py  compare_bulk_methods.py  cursor-log.md  debug_metrics_export.py  debug_metrics_recording.py  debug_otel_metrics.py  deploy_attribute_fix.sh  deploy_daemonset_collector.sh  deploy_dynamic_metrics_fix.sh  deploy_enhanced_logging.sh  deploy_metrics_fix.sh  deploy_otel_only_fix.sh  deploy_performance_optimized.sh  deploy_ultra_performance.sh  disable_monitoring.py  (+36 more)
app/: api.py  api_fast.py  api_v1.py  api_v2.py  async_metrics_collector.py  batch_validation.py  circuit_breaker.py  config.py  configurable_sampler.py  database.py  database_init.py  environment_config.py  fast_path_middleware.py  health_endpoints.py  lightweight_middleware.py  logging_config.py  main.py  main_minimal.py  middleware_factory.py  models.py  monitoring.py  monitoring_health.py  optimized_services.py  performance_config.py  schemas.py  (+7 more)
(+87 files in other folders)
